修复多处弃用 API 警告并补齐兼容处理